// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery rendering rendering with load more button it shouldn't render the paging button if hasn't more item 1`] = `
<View
  style={{}}
  testID="gallery-test"
>
  <View
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RCTScrollView
      ListEmptyComponent={[Function]}
      ListFooterComponent={null}
      ListFooterComponentStyle={
        {
          "marginTop": 8,
        }
      }
      applyWindowCorrection={[Function]}
      canChangeSize={true}
      contentContainerStyle={
        {
          "backgroundColor": undefined,
          "minHeight": 1,
          "minWidth": 1,
          "paddingLeft": 0,
          "paddingRight": 0,
        }
      }
      contentHeight={0}
      contentWidth={0}
      data={
        [
          {
            "id": "11",
          },
          {
            "id": "22",
          },
          {
            "id": "33",
          },
          {
            "id": "44",
          },
          {
            "id": "55",
          },
          {
            "id": "66",
          },
          {
            "id": "77",
          },
          {
            "id": "88",
          },
          {
            "id": "99",
          },
        ]
      }
      dataProvider={
        DataProvider {
          "_data": [
            {
              "id": "11",
            },
            {
              "id": "22",
            },
            {
              "id": "33",
            },
            {
              "id": "44",
            },
            {
              "id": "55",
            },
            {
              "id": "66",
            },
            {
              "id": "77",
            },
            {
              "id": "88",
            },
            {
              "id": "99",
            },
          ],
          "_firstIndexToProcess": 0,
          "_hasStableIds": true,
          "_requiresDataChangeHandling": false,
          "_size": 9,
          "getStableId": [Function],
          "rowHasChanged": [Function],
        }
      }
      disableRecycling={false}
      estimatedItemSize={100}
      extendedState={{}}
      externalScrollView={[Function]}
      finalRenderAheadOffset={250}
      forceNonDeterministicRendering={true}
      horizontal={false}
      initialOffset={0}
      initialRenderIndex={0}
      isHorizontal={false}
      keyExtractor={[Function]}
      layoutProvider={
        GridLayoutProviderWithProps {
          "_acceptableRelayoutDelta": 1,
          "_getHeightOrWidth": [Function],
          "_getLayoutTypeForIndex": [Function],
          "_getSpan": [Function],
          "_hasExpired": false,
          "_maxSpan": 2,
          "_setLayoutForType": [Function],
          "_tempDim": {
            "height": 0,
            "width": 0,
          },
          "averageWindow": AverageWindow {
            "currentAverage": 100,
            "currentCount": 1,
            "inputValues": [
              100,
            ],
            "nextIndex": 1,
          },
          "defaultEstimatedItemSize": 100,
          "layoutObject": {
            "size": undefined,
            "span": undefined,
          },
          "props": {
            "ListEmptyComponent": [Function],
            "ListFooterComponent": null,
            "ListFooterComponentStyle": {
              "marginTop": 8,
            },
            "data": [
              {
                "id": "11",
              },
              {
                "id": "22",
              },
              {
                "id": "33",
              },
              {
                "id": "44",
              },
              {
                "id": "55",
              },
              {
                "id": "66",
              },
              {
                "id": "77",
              },
              {
                "id": "88",
              },
              {
                "id": "99",
              },
            ],
            "estimatedItemSize": 100,
            "horizontal": false,
            "keyExtractor": [Function],
            "numColumns": 2,
            "onEndReached": [Function],
            "onEndReachedThreshold": 0.6,
            "refreshing": undefined,
            "renderItem": [Function],
            "scrollEventThrottle": 50,
            "style": undefined,
            "testID": "gallery-test-list",
          },
          "renderWindowInsets": {
            "height": 0,
            "width": 0,
          },
          "shouldRefreshWithAnchoring": true,
        }
      }
      maxRenderAhead={750}
      numColumns={2}
      onEndReached={[Function]}
      onEndReachedThreshold={0}
      onEndReachedThresholdRelative={0.6}
      onItemLayout={[Function]}
      onLayout={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onSizeChanged={[Function]}
      onVisibleIndicesChanged={[Function]}
      removeClippedSubviews={false}
      renderAheadOffset={0}
      renderAheadStep={250}
      renderContentContainer={[Function]}
      renderItem={[Function]}
      renderItemContainer={[Function]}
      rowRenderer={[Function]}
      scrollEventThrottle={50}
      scrollThrottle={16}
      scrollViewProps={
        {
          "contentContainerStyle": {
            "backgroundColor": undefined,
            "minHeight": 1,
            "minWidth": 1,
            "paddingLeft": 0,
            "paddingRight": 0,
          },
          "onLayout": [Function],
          "onScrollBeginDrag": [Function],
          "refreshControl": undefined,
          "style": {
            "minHeight": 1,
            "minWidth": 1,
          },
        }
      }
      style={
        {
          "minHeight": 1,
          "minWidth": 1,
        }
      }
      suppressBoundedSizeException={true}
      testID="gallery-test-list"
      windowCorrectionConfig={
        {
          "applyToInitialOffset": true,
          "applyToItemScroll": true,
          "value": {
            "endCorrection": 0,
            "startCorrection": 0,
            "windowShift": -0,
          },
        }
      }
    >
      <View>
        <View
          style={
            {
              "flexDirection": "column",
            }
          }
        >
          <AutoLayoutView
            enableInstrumentation={false}
            horizontal={false}
            onBlankAreaEvent={[Function]}
            onLayout={[Function]}
            renderAheadOffset={0}
            scrollOffset={0}
            style={
              {
                "height": 0,
                "width": 0,
              }
            }
            windowSize={0}
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Gallery rendering rendering with load more button renders correctly 1`] = `
<View
  style={{}}
  testID="gallery-test"
>
  <View
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RCTScrollView
      ListEmptyComponent={[Function]}
      ListFooterComponent={
        <Memo(Pressable)
          android_ripple={
            {
              "color": "rgba(0, 0, 0, 0.2)",
            }
          }
          onPress={[Function]}
          style={{}}
          testID="gallery-test-pagination-button"
        >
          <Text>
            Load more
          </Text>
        </Memo(Pressable)>
      }
      ListFooterComponentStyle={
        {
          "marginTop": 8,
        }
      }
      applyWindowCorrection={[Function]}
      canChangeSize={true}
      contentContainerStyle={
        {
          "backgroundColor": undefined,
          "minHeight": 1,
          "minWidth": 1,
          "paddingLeft": 0,
          "paddingRight": 0,
        }
      }
      contentHeight={0}
      contentWidth={0}
      data={
        [
          {
            "id": "11",
          },
          {
            "id": "22",
          },
          {
            "id": "33",
          },
          {
            "id": "44",
          },
          {
            "id": "55",
          },
          {
            "id": "66",
          },
          {
            "id": "77",
          },
          {
            "id": "88",
          },
          {
            "id": "99",
          },
        ]
      }
      dataProvider={
        DataProvider {
          "_data": [
            {
              "id": "11",
            },
            {
              "id": "22",
            },
            {
              "id": "33",
            },
            {
              "id": "44",
            },
            {
              "id": "55",
            },
            {
              "id": "66",
            },
            {
              "id": "77",
            },
            {
              "id": "88",
            },
            {
              "id": "99",
            },
          ],
          "_firstIndexToProcess": 0,
          "_hasStableIds": true,
          "_requiresDataChangeHandling": false,
          "_size": 9,
          "getStableId": [Function],
          "rowHasChanged": [Function],
        }
      }
      disableRecycling={false}
      estimatedItemSize={100}
      extendedState={{}}
      externalScrollView={[Function]}
      finalRenderAheadOffset={250}
      forceNonDeterministicRendering={true}
      horizontal={false}
      initialOffset={0}
      initialRenderIndex={0}
      isHorizontal={false}
      keyExtractor={[Function]}
      layoutProvider={
        GridLayoutProviderWithProps {
          "_acceptableRelayoutDelta": 1,
          "_getHeightOrWidth": [Function],
          "_getLayoutTypeForIndex": [Function],
          "_getSpan": [Function],
          "_hasExpired": false,
          "_maxSpan": 2,
          "_setLayoutForType": [Function],
          "_tempDim": {
            "height": 0,
            "width": 0,
          },
          "averageWindow": AverageWindow {
            "currentAverage": 100,
            "currentCount": 1,
            "inputValues": [
              100,
            ],
            "nextIndex": 1,
          },
          "defaultEstimatedItemSize": 100,
          "layoutObject": {
            "size": undefined,
            "span": undefined,
          },
          "props": {
            "ListEmptyComponent": [Function],
            "ListFooterComponent": <Memo(Pressable)
              android_ripple={
                {
                  "color": "rgba(0, 0, 0, 0.2)",
                }
              }
              onPress={[Function]}
              style={{}}
              testID="gallery-test-pagination-button"
            >
              <Text>
                Load more
              </Text>
            </Memo(Pressable)>,
            "ListFooterComponentStyle": {
              "marginTop": 8,
            },
            "data": [
              {
                "id": "11",
              },
              {
                "id": "22",
              },
              {
                "id": "33",
              },
              {
                "id": "44",
              },
              {
                "id": "55",
              },
              {
                "id": "66",
              },
              {
                "id": "77",
              },
              {
                "id": "88",
              },
              {
                "id": "99",
              },
            ],
            "estimatedItemSize": 100,
            "horizontal": false,
            "keyExtractor": [Function],
            "numColumns": 2,
            "onEndReached": [Function],
            "onEndReachedThreshold": 0.6,
            "refreshing": undefined,
            "renderItem": [Function],
            "scrollEventThrottle": 50,
            "style": undefined,
            "testID": "gallery-test-list",
          },
          "renderWindowInsets": {
            "height": 0,
            "width": 0,
          },
          "shouldRefreshWithAnchoring": true,
        }
      }
      maxRenderAhead={750}
      numColumns={2}
      onEndReached={[Function]}
      onEndReachedThreshold={0}
      onEndReachedThresholdRelative={0.6}
      onItemLayout={[Function]}
      onLayout={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onSizeChanged={[Function]}
      onVisibleIndicesChanged={[Function]}
      removeClippedSubviews={false}
      renderAheadOffset={0}
      renderAheadStep={250}
      renderContentContainer={[Function]}
      renderItem={[Function]}
      renderItemContainer={[Function]}
      rowRenderer={[Function]}
      scrollEventThrottle={50}
      scrollThrottle={16}
      scrollViewProps={
        {
          "contentContainerStyle": {
            "backgroundColor": undefined,
            "minHeight": 1,
            "minWidth": 1,
            "paddingLeft": 0,
            "paddingRight": 0,
          },
          "onLayout": [Function],
          "onScrollBeginDrag": [Function],
          "refreshControl": undefined,
          "style": {
            "minHeight": 1,
            "minWidth": 1,
          },
        }
      }
      style={
        {
          "minHeight": 1,
          "minWidth": 1,
        }
      }
      suppressBoundedSizeException={true}
      testID="gallery-test-list"
      windowCorrectionConfig={
        {
          "applyToInitialOffset": true,
          "applyToItemScroll": true,
          "value": {
            "endCorrection": 0,
            "startCorrection": 0,
            "windowShift": -0,
          },
        }
      }
    >
      <View>
        <View
          style={
            {
              "flexDirection": "column",
            }
          }
        >
          <AutoLayoutView
            enableInstrumentation={false}
            horizontal={false}
            onBlankAreaEvent={[Function]}
            onLayout={[Function]}
            renderAheadOffset={0}
            scrollOffset={0}
            style={
              {
                "height": 0,
                "width": 0,
              }
            }
            windowSize={0}
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Gallery rendering rendering with load more button renders correctly with custom paging button title 1`] = `
<View
  style={{}}
  testID="gallery-test"
>
  <View
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RCTScrollView
      ListEmptyComponent={[Function]}
      ListFooterComponent={
        <Memo(Pressable)
          android_ripple={
            {
              "color": "rgba(0, 0, 0, 0.2)",
            }
          }
          onPress={[Function]}
          style={{}}
          testID="gallery-test-pagination-button"
        >
          <Text>
            Show more
          </Text>
        </Memo(Pressable)>
      }
      ListFooterComponentStyle={
        {
          "marginTop": 8,
        }
      }
      applyWindowCorrection={[Function]}
      canChangeSize={true}
      contentContainerStyle={
        {
          "backgroundColor": undefined,
          "minHeight": 1,
          "minWidth": 1,
          "paddingLeft": 0,
          "paddingRight": 0,
        }
      }
      contentHeight={0}
      contentWidth={0}
      data={
        [
          {
            "id": "11",
          },
          {
            "id": "22",
          },
          {
            "id": "33",
          },
          {
            "id": "44",
          },
          {
            "id": "55",
          },
          {
            "id": "66",
          },
          {
            "id": "77",
          },
          {
            "id": "88",
          },
          {
            "id": "99",
          },
        ]
      }
      dataProvider={
        DataProvider {
          "_data": [
            {
              "id": "11",
            },
            {
              "id": "22",
            },
            {
              "id": "33",
            },
            {
              "id": "44",
            },
            {
              "id": "55",
            },
            {
              "id": "66",
            },
            {
              "id": "77",
            },
            {
              "id": "88",
            },
            {
              "id": "99",
            },
          ],
          "_firstIndexToProcess": 0,
          "_hasStableIds": true,
          "_requiresDataChangeHandling": false,
          "_size": 9,
          "getStableId": [Function],
          "rowHasChanged": [Function],
        }
      }
      disableRecycling={false}
      estimatedItemSize={100}
      extendedState={{}}
      externalScrollView={[Function]}
      finalRenderAheadOffset={250}
      forceNonDeterministicRendering={true}
      horizontal={false}
      initialOffset={0}
      initialRenderIndex={0}
      isHorizontal={false}
      keyExtractor={[Function]}
      layoutProvider={
        GridLayoutProviderWithProps {
          "_acceptableRelayoutDelta": 1,
          "_getHeightOrWidth": [Function],
          "_getLayoutTypeForIndex": [Function],
          "_getSpan": [Function],
          "_hasExpired": false,
          "_maxSpan": 2,
          "_setLayoutForType": [Function],
          "_tempDim": {
            "height": 0,
            "width": 0,
          },
          "averageWindow": AverageWindow {
            "currentAverage": 100,
            "currentCount": 1,
            "inputValues": [
              100,
            ],
            "nextIndex": 1,
          },
          "defaultEstimatedItemSize": 100,
          "layoutObject": {
            "size": undefined,
            "span": undefined,
          },
          "props": {
            "ListEmptyComponent": [Function],
            "ListFooterComponent": <Memo(Pressable)
              android_ripple={
                {
                  "color": "rgba(0, 0, 0, 0.2)",
                }
              }
              onPress={[Function]}
              style={{}}
              testID="gallery-test-pagination-button"
            >
              <Text>
                Show more
              </Text>
            </Memo(Pressable)>,
            "ListFooterComponentStyle": {
              "marginTop": 8,
            },
            "data": [
              {
                "id": "11",
              },
              {
                "id": "22",
              },
              {
                "id": "33",
              },
              {
                "id": "44",
              },
              {
                "id": "55",
              },
              {
                "id": "66",
              },
              {
                "id": "77",
              },
              {
                "id": "88",
              },
              {
                "id": "99",
              },
            ],
            "estimatedItemSize": 100,
            "horizontal": false,
            "keyExtractor": [Function],
            "numColumns": 2,
            "onEndReached": [Function],
            "onEndReachedThreshold": 0.6,
            "refreshing": undefined,
            "renderItem": [Function],
            "scrollEventThrottle": 50,
            "style": undefined,
            "testID": "gallery-test-list",
          },
          "renderWindowInsets": {
            "height": 0,
            "width": 0,
          },
          "shouldRefreshWithAnchoring": true,
        }
      }
      maxRenderAhead={750}
      numColumns={2}
      onEndReached={[Function]}
      onEndReachedThreshold={0}
      onEndReachedThresholdRelative={0.6}
      onItemLayout={[Function]}
      onLayout={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onSizeChanged={[Function]}
      onVisibleIndicesChanged={[Function]}
      removeClippedSubviews={false}
      renderAheadOffset={0}
      renderAheadStep={250}
      renderContentContainer={[Function]}
      renderItem={[Function]}
      renderItemContainer={[Function]}
      rowRenderer={[Function]}
      scrollEventThrottle={50}
      scrollThrottle={16}
      scrollViewProps={
        {
          "contentContainerStyle": {
            "backgroundColor": undefined,
            "minHeight": 1,
            "minWidth": 1,
            "paddingLeft": 0,
            "paddingRight": 0,
          },
          "onLayout": [Function],
          "onScrollBeginDrag": [Function],
          "refreshControl": undefined,
          "style": {
            "minHeight": 1,
            "minWidth": 1,
          },
        }
      }
      style={
        {
          "minHeight": 1,
          "minWidth": 1,
        }
      }
      suppressBoundedSizeException={true}
      testID="gallery-test-list"
      windowCorrectionConfig={
        {
          "applyToInitialOffset": true,
          "applyToItemScroll": true,
          "value": {
            "endCorrection": 0,
            "startCorrection": 0,
            "windowShift": -0,
          },
        }
      }
    >
      <View>
        <View
          style={
            {
              "flexDirection": "column",
            }
          }
        >
          <AutoLayoutView
            enableInstrumentation={false}
            horizontal={false}
            onBlankAreaEvent={[Function]}
            onLayout={[Function]}
            renderAheadOffset={0}
            scrollOffset={0}
            style={
              {
                "height": 0,
                "width": 0,
              }
            }
            windowSize={0}
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Gallery rendering renders correctly 1`] = `
<View
  style={{}}
  testID="gallery-test"
>
  <View
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RCTScrollView
      ListEmptyComponent={[Function]}
      ListFooterComponent={null}
      ListFooterComponentStyle={
        {
          "marginTop": 8,
        }
      }
      applyWindowCorrection={[Function]}
      canChangeSize={true}
      contentContainerStyle={
        {
          "backgroundColor": undefined,
          "minHeight": 1,
          "minWidth": 1,
          "paddingLeft": 0,
          "paddingRight": 0,
        }
      }
      contentHeight={0}
      contentWidth={0}
      data={
        [
          {
            "id": "11",
          },
          {
            "id": "22",
          },
          {
            "id": "33",
          },
          {
            "id": "44",
          },
          {
            "id": "55",
          },
          {
            "id": "66",
          },
          {
            "id": "77",
          },
          {
            "id": "88",
          },
          {
            "id": "99",
          },
        ]
      }
      dataProvider={
        DataProvider {
          "_data": [
            {
              "id": "11",
            },
            {
              "id": "22",
            },
            {
              "id": "33",
            },
            {
              "id": "44",
            },
            {
              "id": "55",
            },
            {
              "id": "66",
            },
            {
              "id": "77",
            },
            {
              "id": "88",
            },
            {
              "id": "99",
            },
          ],
          "_firstIndexToProcess": 0,
          "_hasStableIds": true,
          "_requiresDataChangeHandling": false,
          "_size": 9,
          "getStableId": [Function],
          "rowHasChanged": [Function],
        }
      }
      disableRecycling={false}
      estimatedItemSize={100}
      extendedState={{}}
      externalScrollView={[Function]}
      finalRenderAheadOffset={250}
      forceNonDeterministicRendering={true}
      horizontal={false}
      initialOffset={0}
      initialRenderIndex={0}
      isHorizontal={false}
      keyExtractor={[Function]}
      layoutProvider={
        GridLayoutProviderWithProps {
          "_acceptableRelayoutDelta": 1,
          "_getHeightOrWidth": [Function],
          "_getLayoutTypeForIndex": [Function],
          "_getSpan": [Function],
          "_hasExpired": false,
          "_maxSpan": 2,
          "_setLayoutForType": [Function],
          "_tempDim": {
            "height": 0,
            "width": 0,
          },
          "averageWindow": AverageWindow {
            "currentAverage": 100,
            "currentCount": 1,
            "inputValues": [
              100,
            ],
            "nextIndex": 1,
          },
          "defaultEstimatedItemSize": 100,
          "layoutObject": {
            "size": undefined,
            "span": undefined,
          },
          "props": {
            "ListEmptyComponent": [Function],
            "ListFooterComponent": null,
            "ListFooterComponentStyle": {
              "marginTop": 8,
            },
            "data": [
              {
                "id": "11",
              },
              {
                "id": "22",
              },
              {
                "id": "33",
              },
              {
                "id": "44",
              },
              {
                "id": "55",
              },
              {
                "id": "66",
              },
              {
                "id": "77",
              },
              {
                "id": "88",
              },
              {
                "id": "99",
              },
            ],
            "estimatedItemSize": 100,
            "horizontal": false,
            "keyExtractor": [Function],
            "numColumns": 2,
            "onEndReached": [Function],
            "onEndReachedThreshold": 0.6,
            "refreshing": undefined,
            "renderItem": [Function],
            "scrollEventThrottle": 50,
            "style": undefined,
            "testID": "gallery-test-list",
          },
          "renderWindowInsets": {
            "height": 0,
            "width": 0,
          },
          "shouldRefreshWithAnchoring": true,
        }
      }
      maxRenderAhead={750}
      numColumns={2}
      onEndReached={[Function]}
      onEndReachedThreshold={0}
      onEndReachedThresholdRelative={0.6}
      onItemLayout={[Function]}
      onLayout={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onSizeChanged={[Function]}
      onVisibleIndicesChanged={[Function]}
      removeClippedSubviews={false}
      renderAheadOffset={0}
      renderAheadStep={250}
      renderContentContainer={[Function]}
      renderItem={[Function]}
      renderItemContainer={[Function]}
      rowRenderer={[Function]}
      scrollEventThrottle={50}
      scrollThrottle={16}
      scrollViewProps={
        {
          "contentContainerStyle": {
            "backgroundColor": undefined,
            "minHeight": 1,
            "minWidth": 1,
            "paddingLeft": 0,
            "paddingRight": 0,
          },
          "onLayout": [Function],
          "onScrollBeginDrag": [Function],
          "refreshControl": undefined,
          "style": {
            "minHeight": 1,
            "minWidth": 1,
          },
        }
      }
      style={
        {
          "minHeight": 1,
          "minWidth": 1,
        }
      }
      suppressBoundedSizeException={true}
      testID="gallery-test-list"
      windowCorrectionConfig={
        {
          "applyToInitialOffset": true,
          "applyToItemScroll": true,
          "value": {
            "endCorrection": 0,
            "startCorrection": 0,
            "windowShift": -0,
          },
        }
      }
    >
      <View>
        <View
          style={
            {
              "flexDirection": "column",
            }
          }
        >
          <AutoLayoutView
            enableInstrumentation={false}
            horizontal={false}
            onBlankAreaEvent={[Function]}
            onLayout={[Function]}
            renderAheadOffset={0}
            scrollOffset={0}
            style={
              {
                "height": 0,
                "width": 0,
              }
            }
            windowSize={0}
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Gallery rendering renders correctly horizontal 1`] = `
<View
  style={{}}
  testID="gallery-test"
>
  <View
    style={{}}
  >
    <RCTScrollView
      ListEmptyComponent={[Function]}
      ListFooterComponent={null}
      ListFooterComponentStyle={
        {
          "marginStart": 8,
        }
      }
      applyWindowCorrection={[Function]}
      canChangeSize={true}
      contentContainerStyle={
        {
          "backgroundColor": undefined,
          "minHeight": 1,
          "minWidth": 1,
          "paddingBottom": 0,
          "paddingTop": 0,
        }
      }
      contentHeight={0}
      contentWidth={0}
      data={
        [
          {
            "id": "11",
          },
          {
            "id": "22",
          },
          {
            "id": "33",
          },
          {
            "id": "44",
          },
          {
            "id": "55",
          },
          {
            "id": "66",
          },
          {
            "id": "77",
          },
          {
            "id": "88",
          },
          {
            "id": "99",
          },
        ]
      }
      dataProvider={
        DataProvider {
          "_data": [
            {
              "id": "11",
            },
            {
              "id": "22",
            },
            {
              "id": "33",
            },
            {
              "id": "44",
            },
            {
              "id": "55",
            },
            {
              "id": "66",
            },
            {
              "id": "77",
            },
            {
              "id": "88",
            },
            {
              "id": "99",
            },
          ],
          "_firstIndexToProcess": 0,
          "_hasStableIds": true,
          "_requiresDataChangeHandling": false,
          "_size": 9,
          "getStableId": [Function],
          "rowHasChanged": [Function],
        }
      }
      disableRecycling={false}
      estimatedItemSize={100}
      extendedState={{}}
      externalScrollView={[Function]}
      finalRenderAheadOffset={250}
      forceNonDeterministicRendering={true}
      horizontal={true}
      initialOffset={0}
      initialRenderIndex={0}
      isHorizontal={true}
      keyExtractor={[Function]}
      layoutProvider={
        GridLayoutProviderWithProps {
          "_acceptableRelayoutDelta": 1,
          "_getHeightOrWidth": [Function],
          "_getLayoutTypeForIndex": [Function],
          "_getSpan": [Function],
          "_hasExpired": false,
          "_maxSpan": 1,
          "_setLayoutForType": [Function],
          "_tempDim": {
            "height": 0,
            "width": 0,
          },
          "averageWindow": AverageWindow {
            "currentAverage": 100,
            "currentCount": 1,
            "inputValues": [
              100,
            ],
            "nextIndex": 1,
          },
          "defaultEstimatedItemSize": 100,
          "layoutObject": {
            "size": undefined,
            "span": undefined,
          },
          "props": {
            "ListEmptyComponent": [Function],
            "ListFooterComponent": null,
            "ListFooterComponentStyle": {
              "marginStart": 8,
            },
            "data": [
              {
                "id": "11",
              },
              {
                "id": "22",
              },
              {
                "id": "33",
              },
              {
                "id": "44",
              },
              {
                "id": "55",
              },
              {
                "id": "66",
              },
              {
                "id": "77",
              },
              {
                "id": "88",
              },
              {
                "id": "99",
              },
            ],
            "estimatedItemSize": 100,
            "horizontal": true,
            "keyExtractor": [Function],
            "numColumns": 1,
            "onEndReached": [Function],
            "onEndReachedThreshold": 0.6,
            "refreshing": undefined,
            "renderItem": [Function],
            "scrollEventThrottle": 50,
            "style": undefined,
            "testID": "gallery-test-list",
          },
          "renderWindowInsets": {
            "height": 0,
            "width": 0,
          },
          "shouldRefreshWithAnchoring": true,
        }
      }
      maxRenderAhead={750}
      numColumns={1}
      onEndReached={[Function]}
      onEndReachedThreshold={0}
      onEndReachedThresholdRelative={0.6}
      onItemLayout={[Function]}
      onLayout={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onSizeChanged={[Function]}
      onVisibleIndicesChanged={[Function]}
      removeClippedSubviews={false}
      renderAheadOffset={0}
      renderAheadStep={250}
      renderContentContainer={[Function]}
      renderItem={[Function]}
      renderItemContainer={[Function]}
      rowRenderer={[Function]}
      scrollEventThrottle={50}
      scrollThrottle={16}
      scrollViewProps={
        {
          "contentContainerStyle": {
            "backgroundColor": undefined,
            "minHeight": 1,
            "minWidth": 1,
            "paddingBottom": 0,
            "paddingTop": 0,
          },
          "onLayout": [Function],
          "onScrollBeginDrag": [Function],
          "refreshControl": undefined,
          "style": {
            "minHeight": 1,
            "minWidth": 1,
          },
        }
      }
      style={
        {
          "minHeight": 1,
          "minWidth": 1,
        }
      }
      suppressBoundedSizeException={true}
      testID="gallery-test-list"
      windowCorrectionConfig={
        {
          "applyToInitialOffset": true,
          "applyToItemScroll": true,
          "value": {
            "endCorrection": 0,
            "startCorrection": 0,
            "windowShift": -0,
          },
        }
      }
    >
      <View>
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <AutoLayoutView
            enableInstrumentation={false}
            horizontal={true}
            onBlankAreaEvent={[Function]}
            onLayout={[Function]}
            renderAheadOffset={0}
            scrollOffset={0}
            style={
              {
                "height": 0,
                "width": 0,
              }
            }
            windowSize={0}
          />
          <View
            pointerEvents="none"
            style={
              {
                "opacity": 0,
              }
            }
          >
            <View
              style={false}
              testID="gallery-test-list-item-22"
            >
              <View
                style={
                  [
                    undefined,
                    false,
                    false,
                  ]
                }
              >
                22
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Gallery rendering renders correctly with empty list and custom placeholder 1`] = `
<View
  style={{}}
  testID="gallery-test"
>
  <View
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RCTScrollView
      ListEmptyComponent={[Function]}
      ListFooterComponent={null}
      ListFooterComponentStyle={
        {
          "marginTop": 8,
        }
      }
      applyWindowCorrection={[Function]}
      canChangeSize={true}
      contentContainerStyle={
        {
          "backgroundColor": undefined,
          "minHeight": 1,
          "minWidth": 1,
          "paddingLeft": 0,
          "paddingRight": 0,
        }
      }
      contentHeight={0}
      contentWidth={0}
      data={[]}
      dataProvider={
        DataProvider {
          "_data": [],
          "_firstIndexToProcess": 0,
          "_hasStableIds": true,
          "_requiresDataChangeHandling": false,
          "_size": 0,
          "getStableId": [Function],
          "rowHasChanged": [Function],
        }
      }
      disableRecycling={false}
      estimatedItemSize={100}
      extendedState={{}}
      externalScrollView={[Function]}
      finalRenderAheadOffset={250}
      forceNonDeterministicRendering={true}
      horizontal={false}
      initialOffset={0}
      initialRenderIndex={0}
      isHorizontal={false}
      keyExtractor={[Function]}
      layoutProvider={
        GridLayoutProviderWithProps {
          "_acceptableRelayoutDelta": 1,
          "_getHeightOrWidth": [Function],
          "_getLayoutTypeForIndex": [Function],
          "_getSpan": [Function],
          "_hasExpired": false,
          "_maxSpan": 2,
          "_setLayoutForType": [Function],
          "_tempDim": {
            "height": 0,
            "width": 0,
          },
          "averageWindow": AverageWindow {
            "currentAverage": 100,
            "currentCount": 1,
            "inputValues": [
              100,
            ],
            "nextIndex": 1,
          },
          "defaultEstimatedItemSize": 100,
          "layoutObject": {
            "size": undefined,
            "span": undefined,
          },
          "props": {
            "ListEmptyComponent": [Function],
            "ListFooterComponent": null,
            "ListFooterComponentStyle": {
              "marginTop": 8,
            },
            "data": [],
            "estimatedItemSize": 100,
            "horizontal": false,
            "keyExtractor": [Function],
            "numColumns": 2,
            "onEndReached": [Function],
            "onEndReachedThreshold": 0.6,
            "refreshing": false,
            "renderItem": [Function],
            "scrollEventThrottle": 50,
            "style": undefined,
            "testID": "gallery-test-list",
          },
          "renderWindowInsets": {
            "height": 0,
            "width": 0,
          },
          "shouldRefreshWithAnchoring": true,
        }
      }
      maxRenderAhead={750}
      numColumns={2}
      onEndReached={[Function]}
      onEndReachedThreshold={0}
      onEndReachedThresholdRelative={0.6}
      onItemLayout={[Function]}
      onLayout={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onSizeChanged={[Function]}
      onVisibleIndicesChanged={[Function]}
      refreshing={false}
      removeClippedSubviews={false}
      renderAheadOffset={0}
      renderAheadStep={250}
      renderContentContainer={[Function]}
      renderItem={[Function]}
      renderItemContainer={[Function]}
      rowRenderer={[Function]}
      scrollEventThrottle={50}
      scrollThrottle={16}
      scrollViewProps={
        {
          "contentContainerStyle": {
            "backgroundColor": undefined,
            "minHeight": 1,
            "minWidth": 1,
            "paddingLeft": 0,
            "paddingRight": 0,
          },
          "onLayout": [Function],
          "onScrollBeginDrag": [Function],
          "refreshControl": undefined,
          "style": {
            "minHeight": 1,
            "minWidth": 1,
          },
        }
      }
      style={
        {
          "minHeight": 1,
          "minWidth": 1,
        }
      }
      suppressBoundedSizeException={true}
      testID="gallery-test-list"
      windowCorrectionConfig={
        {
          "applyToInitialOffset": true,
          "applyToItemScroll": true,
          "value": {
            "endCorrection": 0,
            "startCorrection": 0,
            "windowShift": -0,
          },
        }
      }
    >
      <View>
        <View
          style={
            {
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              {
                "paddingLeft": 0,
                "paddingTop": 0,
              }
            }
          />
          <View
            style={
              [
                undefined,
                undefined,
              ]
            }
          />
          <AutoLayoutView
            enableInstrumentation={false}
            horizontal={false}
            onBlankAreaEvent={[Function]}
            onLayout={[Function]}
            renderAheadOffset={0}
            scrollOffset={0}
            style={
              {
                "height": 0,
                "width": 0,
              }
            }
            windowSize={0}
          />
          <View>
            <Text>
              Empty list...
            </Text>
          </View>
          <CellContainer
            index={-1}
            style={
              [
                {
                  "marginTop": 8,
                },
                undefined,
              ]
            }
          />
          <View
            style={
              {
                "paddingBottom": 0,
                "paddingRight": 0,
              }
            }
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Gallery rendering renders correctly with filter 1`] = `
<View
  style={{}}
  testID="gallery-test"
>
  <View>
    <TextInput />
  </View>
  <View
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RCTScrollView
      ListEmptyComponent={[Function]}
      ListFooterComponent={null}
      ListFooterComponentStyle={
        {
          "marginTop": 8,
        }
      }
      applyWindowCorrection={[Function]}
      canChangeSize={true}
      contentContainerStyle={
        {
          "backgroundColor": undefined,
          "minHeight": 1,
          "minWidth": 1,
          "paddingLeft": 0,
          "paddingRight": 0,
        }
      }
      contentHeight={0}
      contentWidth={0}
      data={
        [
          {
            "id": "11",
          },
          {
            "id": "22",
          },
          {
            "id": "33",
          },
          {
            "id": "44",
          },
          {
            "id": "55",
          },
          {
            "id": "66",
          },
          {
            "id": "77",
          },
          {
            "id": "88",
          },
          {
            "id": "99",
          },
        ]
      }
      dataProvider={
        DataProvider {
          "_data": [
            {
              "id": "11",
            },
            {
              "id": "22",
            },
            {
              "id": "33",
            },
            {
              "id": "44",
            },
            {
              "id": "55",
            },
            {
              "id": "66",
            },
            {
              "id": "77",
            },
            {
              "id": "88",
            },
            {
              "id": "99",
            },
          ],
          "_firstIndexToProcess": 0,
          "_hasStableIds": true,
          "_requiresDataChangeHandling": false,
          "_size": 9,
          "getStableId": [Function],
          "rowHasChanged": [Function],
        }
      }
      disableRecycling={false}
      estimatedItemSize={100}
      extendedState={{}}
      externalScrollView={[Function]}
      finalRenderAheadOffset={250}
      forceNonDeterministicRendering={true}
      horizontal={false}
      initialOffset={0}
      initialRenderIndex={0}
      isHorizontal={false}
      keyExtractor={[Function]}
      layoutProvider={
        GridLayoutProviderWithProps {
          "_acceptableRelayoutDelta": 1,
          "_getHeightOrWidth": [Function],
          "_getLayoutTypeForIndex": [Function],
          "_getSpan": [Function],
          "_hasExpired": false,
          "_maxSpan": 2,
          "_setLayoutForType": [Function],
          "_tempDim": {
            "height": 0,
            "width": 0,
          },
          "averageWindow": AverageWindow {
            "currentAverage": 100,
            "currentCount": 1,
            "inputValues": [
              100,
            ],
            "nextIndex": 1,
          },
          "defaultEstimatedItemSize": 100,
          "layoutObject": {
            "size": undefined,
            "span": undefined,
          },
          "props": {
            "ListEmptyComponent": [Function],
            "ListFooterComponent": null,
            "ListFooterComponentStyle": {
              "marginTop": 8,
            },
            "data": [
              {
                "id": "11",
              },
              {
                "id": "22",
              },
              {
                "id": "33",
              },
              {
                "id": "44",
              },
              {
                "id": "55",
              },
              {
                "id": "66",
              },
              {
                "id": "77",
              },
              {
                "id": "88",
              },
              {
                "id": "99",
              },
            ],
            "estimatedItemSize": 100,
            "horizontal": false,
            "keyExtractor": [Function],
            "numColumns": 2,
            "onEndReached": [Function],
            "onEndReachedThreshold": 0.6,
            "refreshing": undefined,
            "renderItem": [Function],
            "scrollEventThrottle": 50,
            "style": undefined,
            "testID": "gallery-test-list",
          },
          "renderWindowInsets": {
            "height": 0,
            "width": 0,
          },
          "shouldRefreshWithAnchoring": true,
        }
      }
      maxRenderAhead={750}
      numColumns={2}
      onEndReached={[Function]}
      onEndReachedThreshold={0}
      onEndReachedThresholdRelative={0.6}
      onItemLayout={[Function]}
      onLayout={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onSizeChanged={[Function]}
      onVisibleIndicesChanged={[Function]}
      removeClippedSubviews={false}
      renderAheadOffset={0}
      renderAheadStep={250}
      renderContentContainer={[Function]}
      renderItem={[Function]}
      renderItemContainer={[Function]}
      rowRenderer={[Function]}
      scrollEventThrottle={50}
      scrollThrottle={16}
      scrollViewProps={
        {
          "contentContainerStyle": {
            "backgroundColor": undefined,
            "minHeight": 1,
            "minWidth": 1,
            "paddingLeft": 0,
            "paddingRight": 0,
          },
          "onLayout": [Function],
          "onScrollBeginDrag": [Function],
          "refreshControl": undefined,
          "style": {
            "minHeight": 1,
            "minWidth": 1,
          },
        }
      }
      style={
        {
          "minHeight": 1,
          "minWidth": 1,
        }
      }
      suppressBoundedSizeException={true}
      testID="gallery-test-list"
      windowCorrectionConfig={
        {
          "applyToInitialOffset": true,
          "applyToItemScroll": true,
          "value": {
            "endCorrection": 0,
            "startCorrection": 0,
            "windowShift": -0,
          },
        }
      }
    >
      <View>
        <View
          style={
            {
              "flexDirection": "column",
            }
          }
        >
          <AutoLayoutView
            enableInstrumentation={false}
            horizontal={false}
            onBlankAreaEvent={[Function]}
            onLayout={[Function]}
            renderAheadOffset={0}
            scrollOffset={0}
            style={
              {
                "height": 0,
                "width": 0,
              }
            }
            windowSize={0}
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
